<resources>
    <string name="app_name">IIIT RANCHI</string>
    <string name="action_settings">Settings</string>
    <string name="message_hint">Write you message here...</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="SignUp">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="usernameStr">Email Id</string>
    <string name="nameStr">Name</string>
    <string name="passStr">Password</string>
    <string name="cpassStr">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="display_name">Display Name</string>
    <string name="text">Text</string>
    <string name="sent_text">Sent Text</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_options">IIIT RANCHI</string>
    <string name="title_activity_add_poll">AddPoll</string>
    <string name="title_activity_vote">VoteActivity</string>
    <string name="categories">Categories :</string>
    <string name="set_pro_pic">Change profile Picture</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="registration_number">Registration Number</string>
    <string name="institute_link"><a href="http://www.iiitranchi.ac.in">Website</a></string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="default_notification_channel_id">General Notification</string>
</resources>
