<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="chat.chat.chat.SignUpActivity"
    android:background="@color/gen_white"
    tools:showIn="@layout/activity_sign_up">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:textColorHint="@color/black_app"
        android:textColor="@color/black"
        android:hint="@string/nameStr"
        android:background="@drawable/edt_background"
        android:layout_marginTop="50dp"
        android:inputType="textPersonName"
        android:maxLines="1" />
    <EditText
        android:id="@+id/username"
        android:textColorHint="@color/black_app"
        android:textColor="@color/black"
        android:layout_below="@+id/name"
        android:hint="@string/registration_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edt_background"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/edtMarginSignUp"
        android:inputType="text"
        android:maxLines="1" />
    <EditText
        android:id="@+id/email_id"
        android:layout_below="@+id/username"
        android:textColorHint="@color/black_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/usernameStr"
        android:background="@drawable/edt_background"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/edtMarginSignUp"
        android:inputType="textEmailAddress"
        android:maxLines="1"

        />
    <EditText
        android:textColorHint="@color/black_app"
        android:textColor="@color/black"
        android:id="@+id/pwd"
        android:background="@drawable/edt_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passStr"
        android:layout_below="@+id/email_id"
        android:layout_marginTop="@dimen/edtMarginSignUp"
        android:inputType="textPassword"
        android:maxLines="1" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edt_background"
        android:id="@+id/cpwd"
        android:hint="@string/cpassStr"
        android:layout_below="@+id/pwd"
        android:password="true"
        android:textColorHint="@color/black_app"
        android:textColor="@color/black"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/edtMarginSignUp"
        android:inputType="textPassword"
        android:maxLines="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:background="@drawable/btn_background"
        android:id="@+id/button"
        android:textColor="@color/white"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/cpwd"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
